k8s/payment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment
  labels:
    app: payment
spec:
  type: ClusterIP
  selector:
    app: payment
  ports:
    - name: http
      port: 80
      targetPort: http
